--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font: 16px/28px "Source Sans Pro", HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 .body{
     /* background: rgb(255, 255, 255); */
     background: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url("https://png.pngtree.com/background/20230527/original/pngtree-processor-microcontroller-computer-motherboard-picture-image_2770520.jpg") no-repeat center center;
@@ -7,7 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font: 16px/28px "Source Sans Pro", HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    
     transition: 0.2s;
     padding: 10px;
     border-radius: 20px;
@@ -31,6 +35,11 @@
     align-items: center;
 }
 
+p{
+    border-radius: 10px;
+    padding: 0 10px;
+}
+
 .p{
     font-size: 30px;
     display: flex;
@@ -52,21 +61,25 @@
     background: rgb(246, 248, 121);
 }
 
+#notesQ, #notesQH{
+    display:none;
+}
 
 .blocPlus{
     
     border: 2px solid white;
-    border-radius: 50%;
+    border-radius: 20px;
     padding: 20px;
     box-shadow: 0px 0px 22px 0px rgba(145,145,145,0.58);
     transition: 0.2s;
-    width: 40px;
-    height: 40px;
+    /* width: 10px;
+    height: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.3s;
     margin: 10px;
+    transform: scale(0.93);
 }
 
 .blocPlus:active{
@@ -74,18 +87,21 @@
 }
 
 .plus{
-    font-size: 60px;
+    font-size: 25px;
     color: rgb(100, 100, 100);
     transition: 0.3s;
+    scale: 90%;
+  
    
 }
 
 .plus:hover{
-    rotate: 135deg;
+    scale: 100%;
 }
 
 .plus:active{
     color: rgb(0, 0, 0);
+    scale: 100%;
 }
 
 .info{
@@ -160,6 +176,22 @@ button:active {
     background: rgb(246, 248, 121);
 }
 
+#rep1H{
+    background: rgb(248, 121, 121);
+}
+
+#rep2H{
+    background: rgb(121, 187, 248);
+}
+
+#rep3H{
+    background: rgb(121, 248, 178);
+}
+
+#rep4H{
+    background: rgb(246, 248, 121);
+}
+
 
 input{
     width: 50px;
@@ -189,7 +221,7 @@ input:focus{
 }
 
 
-#notes, #rendu, #reponse{
+#notes,#notesQ,#notesQH, #rendu, #reponse{
     border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     transition: 1s;
@@ -197,7 +229,7 @@ input:focus{
     box-shadow: 0px 0px 22px 0px rgba(240, 240, 240, 0.685);
 }
 
-#notes:hover, #rendu:hover, #reponse:hover{
+#notes:hover,#notesQ:hover,#notesQH:hover, #rendu:hover, #reponse:hover{
     /* border: 2px solid rgb(32, 114, 238); */
     border-radius: 5px;
     box-shadow: 0px 0px 22px 0px rgba(32, 114, 238, 0.288);
