--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body{
     border-radius: 20px;
 }
 
+
+
 .block{
     display: none;
     background: rgb(255, 255, 255);
@@ -115,8 +117,71 @@ h1, h2{
     text-align: center;
 }
 
+.infoAnki{
+    min-height: 450px ;
+    display: flex;
+    
+    justify-content: center;
+    transition: 0.2s;
+}
+
 .infodiv{
     width: 15em;
+}
+
+.carteBlock{
+    width: 225px;
+    height: 375px;  
+    /* transition: all 0.8s ease; */
+    perspective: 300px;
+}
+
+/* .carteBlock:hover .carte{
+    transform: rotateY(-180deg);
+} */
+
+.carte{
+    height: 100%;
+    width: 100%;
+    transition: all 0.8s ease;
+    transform-style: preserve-3d;
+    position: relative;
+
+}
+
+b{
+    padding: 5px;
+    border-radius: 5px;
+}
+.carteUp, .carteDown{
+    border-radius: 20px;
+    border: 10px solid rgb(240, 240, 240);
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 22px 0px rgba(145,145,145,0.58);
+}
+
+.carteUp{
+    height: 100%;
+    width: 100%;
+    background: rgb(248, 121, 121);
+    transform: rotateY(0deg);
+    backface-visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.carteDown{
+    height: 100%;
+    width: 100%;
+    background: rgb(240, 240, 240);
+    backface-visibility: hidden;
+    transform: rotateY(-180deg);
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 button{
@@ -221,7 +286,7 @@ input:focus{
 }
 
 
-#notes,#notesQ,#notesQH, #rendu, #reponse{
+#notes,#notesQ,#notesQH{
     border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     transition: 1s;
@@ -229,7 +294,7 @@ input:focus{
     box-shadow: 0px 0px 22px 0px rgba(240, 240, 240, 0.685);
 }
 
-#notes:hover,#notesQ:hover,#notesQH:hover, #rendu:hover, #reponse:hover{
+#notes:hover,#notesQ:hover,#notesQH:hover{
     /* border: 2px solid rgb(32, 114, 238); */
     border-radius: 5px;
     box-shadow: 0px 0px 22px 0px rgba(32, 114, 238, 0.288);
